// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseTemplate eachBlock结点(有index) 1`] = `
Node {
  "attrs": [],
  "children": [
    Node {
      "attrs": [],
      "children": [],
      "data": {
        "index": "index",
        "localScopeVariable": "item",
        "variableExpression": "guaqius",
      },
      "end": 0,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "each Block",
    },
  ],
  "data": "",
  "end": 29,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parseTemplate eachBlock结点(没有index) 1`] = `
Node {
  "attrs": [],
  "children": [
    Node {
      "attrs": [],
      "children": [],
      "data": {
        "localScopeVariable": "item",
        "variableExpression": "guaqius",
      },
      "end": 0,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "each Block",
    },
  ],
  "data": "",
  "end": 23,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parseTemplate end block 1`] = `
Node {
  "attrs": [],
  "children": [
    Node {
      "attrs": [],
      "children": [],
      "data": {
        "index": "i",
        "localScopeVariable": "item",
        "variableExpression": "guaqius",
      },
      "end": 32,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "each Block",
    },
  ],
  "data": "",
  "end": 32,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parseTemplate ifblock结点 1`] = `
Node {
  "attrs": [],
  "children": [
    Node {
      "attrs": [],
      "children": [],
      "data": {
        "ifCondition": "guaqiu",
      },
      "end": 0,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "if Block",
    },
  ],
  "data": "",
  "end": 12,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parseTemplate 得到text 1`] = `
Node {
  "attrs": [],
  "children": [
    Node {
      "attrs": [],
      "children": [
        Node {
          "attrs": [],
          "children": [],
          "data": "Hello Svelte",
          "end": 17,
          "name": "",
          "selfClosing": false,
          "start": 5,
          "type": "Text",
        },
      ],
      "data": "",
      "end": 22,
      "name": "div",
      "selfClosing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "data": "",
  "end": 23,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parseTemplate 解析html模板 1`] = `
Node {
  "attrs": [],
  "children": [
    Node {
      "attrs": [
        {
          "name": "class",
          "type": "Attribute",
          "value": "wrapper",
        },
      ],
      "children": [],
      "data": "",
      "end": 22,
      "name": "div",
      "selfClosing": true,
      "start": 0,
      "type": "Element",
    },
  ],
  "data": "",
  "end": 22,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;
